@@ -1,5 +1,8 @@
 2008-08-03  Miloslav Trmač  <mitr@redhat.com>
 
+	* userhelper-wrap.c (userhelper_parse_childout): Left-justify all
+	messages.
+
 	* userhelper-wrap.c (struct response): New member
 	dialog_response_handler.
 	(userhelper_dialog_response): New function.
